add path for jar and conf in all java commands